--- a/src/main/resources/templates/header.mustache
+++ b/src/main/resources/templates/header.mustache
@@ -39,11 +39,26 @@
               <span class="sr-only">(current)</span>
             </a>
           </li>
+          {{#email}}
+          <li class="nav-item">
+            {{email}}
+            <a class="nav-link" href="logout">Logout
+              <span class="sr-only">(current)</span>
+            </a>
+          </li>
+          {{/email}}
+          {{email}}
           <li class="nav-item">
             <a class="nav-link" href="/signup">Sign Up
               <span class="sr-only">(current)</span>
             </a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/login">Login
+              <span class="sr-only">(current)</span>
+            </a>
+          </li>
+          {{/email}}
           <li class="nav-item">
             <a class="nav-link" href="#">About</a>
           </li>
