--- a/src/main/resources/templates/catalog.mustache
+++ b/src/main/resources/templates/catalog.mustache
@@ -60,6 +60,7 @@
                             </div>
                             <div class="card-footer">
                                 <form action="/basket" method="post">
+                                    <input type="hidden" name="_csrf" value="{{_csrf.token}}">
                                     <input type="hidden" name="sku" value="{{sku}}"/>
                                     <button class="btn btn-primary float-right add-to-basket" type="submit">Add</button>
                                 </form>
