--- a/src/main/resources/templates/login.mustache
+++ b/src/main/resources/templates/login.mustache
@@ -4,6 +4,7 @@
         <div class="col-lg-12 mt-4 mb-4">
             <h1>Welcome back to the Cake Factory!</h1>
             <form method="post" action="/login">
+                <input type="hidden" name="_csrf" value="{{_csrf.token}}">
                 <div class="form-group">
                     <label for="emailAddress">Email Address</label>
                     <input required type="text" class="form-control" name="emailAddress" id="emailAddress" placeholder="email@domain.com">
